fix: vertically align close button for compact token (#2276)
* fix: vertically align close button for compact token [ci visual]

* fix: Token - compact mode, vertical centering

* fix: Token - compact mode, vertical centering [ci visual]

--- a/src/token.scss
+++ b/src/token.scss
@@ -103,7 +103,7 @@ $block: #{$fd-namespace}-token;
   @include fd-token-focus();
 
   &--compact {
-    padding: 0 0 $fd-token-compact-padding-vertical $fd-token-compact-padding-horizontal;
+    padding: $fd-token-compact-padding-vertical 0 $fd-token-compact-padding-vertical $fd-token-compact-padding-horizontal;
     height: $fd-token-compact-height;
     min-width: 3rem;
     line-height: 1.125rem;
